# silver-computing-machine

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh
.devcontainer/: README.md  devcontainer.json  docker-compose.dev.yml
scripts/: init-db.sql
src/support_system/: main.py
src/support_system/application/dtos/: models.py
src/support_system/application/interfaces/: services.py
src/support_system/application/use_cases/: services.py
src/support_system/domain/entities/: models.py
src/support_system/domain/repositories/: interfaces.py
src/support_system/domain/services/: interfaces.py
src/support_system/infrastructure/: config.py  container.py
src/support_system/infrastructure/database/: models.py
src/support_system/infrastructure/external_services/: huggingface.py
src/support_system/infrastructure/repositories/: sql_repositories.py
src/support_system/presentation/api/: documents.py  faqs.py  queries.py  tickets.py
src/support_system/presentation/schemas/: api_models.py
